--- a/deployment/deployment.yml
+++ b/deployment/deployment.yml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata: 
-        name: studentapp
+        name: webapp
         labels:
-            app: studentapp
+            app: webapp
 spec:
     replicas: 14
     strategy: 
@@ -13,9 +13,9 @@ spec:
           maxUnavailable: 2  # Maximum number of pods that can be unavailable during the update 
     template:
           metadata: 
-                name: studentapp 
+                name: webapp 
                 labels:
-                      app: studentapp
+                      app: webapp
           spec:
               containers:
                   - name: http
@@ -26,4 +26,4 @@ spec:
                           protocol: TCP      
     selector:
         matchLabels:
-            app: studentapp
+            app: webapp
