--- a/statefulset/statefulset.yml
+++ b/statefulset/statefulset.yml
@@ -24,17 +24,8 @@ spec:
                   containerPort: 3306
                   protocol: TCP
               env:
-                - name: MYSQL_ROOT_PASSWORD
-                  valueFrom:
-                          configMapKeyRef:
-                              name: configmap1
-                              key: DB_PASSWORD 
-                - name: MYSQL_USER_NAME
-                  valueFrom:
-                          configMapKeyRef:
-                              name: configmap1
-                              key: DB_USER 
-                          
+                 - name: MYSQL_ROOT_PASSWORD
+                   value: "1234"
     selector:
         matchLabels:
           app: bgmi
